...
      if (state.hasError &&
          state.hasValue &&
          state.requireValue.isNotEmpty &&
          !state.isLoading) {
        Future.microtask(() {
          const snackBar = SnackBar(
            content: Text("Error, please retry."),
            behavior: SnackBarBehavior.floating,
            duration: Duration(seconds: 2),
          );
          messenger.showSnackBar(snackBar);
        });
      }
...
        children: const [
          Icon(
            Icons.search_off_outlined,
            size: 80,
            color: Colors.blueGrey,
          ),
          Text("No Result"),
        ],
      ),
    );
  }
}

...
